# viktor_table_view

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run-code-quality-tools.sh
viktor_table_view/: __init__.py  table.html.jinja  table_view.py
